<resources>
    <string name="app_name">Four Gadgets</string>
    <string name="bear_image_generator">Bear Image Generator</string>
    <string name="aviation_stack_flight_tracker">Aviation Stack Flight Tracker</string>
    <string name="currency_converter">Currency Converter</string>
    <string name="trivia_question_database">Trivia Question Database</string>
    <string name="author">by Victor Che</string>
    <string name="help">HELP</string>
    <string name="clear">Clear</string>
    <string name="delete">DELETE</string>
    <string name="close">CLOSE</string>
    <string name="amount">Amount</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="convert">CONVERT</string>
    <string name="width">Width:</string>
    <string name="height">Height:</string>
    <string name="bear">BEAR!</string>
    <string name="your_name">Your Name:</string>
    <string name="submit">SUBMIT</string>
    <string name="airport_code">Airport Code: </string>
    <string name="new_quiz">New QUIZ!</string>
    <string name="see_top_10_records">See Top 10 Records</string>
    <string name="saved_flights">Saved Flights</string>
    <string name="save">SAVE</string>
    <string name="search_flights">Search FLIGHTS</string>
</resources>