<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_currency"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CurrencyActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_amount"
        android:layout_width="87dp"
        android:layout_height="wrap_content"
        android:text="@string/amount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/tv_from"
        android:layout_width="187dp"
        android:layout_height="wrap_content"
        android:text="@string/from"
        app:layout_constraintStart_toEndOf="@+id/tv_amount"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/tv_to"
        android:layout_width="137dp"
        android:layout_height="wrap_content"
        android:text="@string/to"
        app:layout_constraintStart_toEndOf="@+id/tv_from"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <EditText
        android:id="@+id/input_money"
        android:layout_width="87dp"
        android:layout_height="50dp"
        android:hint="1.00"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_amount" />

    <Spinner
        android:id="@+id/spinner_from"
        android:layout_width="137dp"
        android:layout_height="50dp"
        app:layout_constraintStart_toEndOf="@+id/input_money"
        app:layout_constraintTop_toTopOf="@+id/input_money" />

    <Spinner
        android:id="@+id/spinner_to"
        android:layout_width="137dp"
        android:layout_height="50dp"
        app:layout_constraintStart_toEndOf="@+id/icon_swap"
        app:layout_constraintTop_toTopOf="@+id/icon_swap" />

    <ImageButton
        android:id="@+id/icon_swap"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="swap from and to"
        app:layout_constraintStart_toEndOf="@+id/spinner_from"
        app:layout_constraintTop_toTopOf="@+id/spinner_from"
        app:srcCompat="@drawable/swap" />

    <Button
        android:id="@+id/btn_convert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/convert"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_to" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_conversion"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_convert" >

    </androidx.recyclerview.widget.RecyclerView>

    <Button
        android:id="@+id/btn_clear_records"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:text="@string/clear"
        android:textSize="12sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/rv_conversion"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>